<resources>
    <string name="app_name">TODO List</string>

    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_details">Note details</string>
    <string name="set_note_name">Set Note Name</string>
    <string name="add_image">Add Image</string>
    <string name="category">Category</string>

    <string-array name="Categories">
        <item>Other</item>
        <item>Learning</item>
        <item>Work</item>
        <item>Entertainment</item>
    </string-array>

    <string-array name="FilterCategories">
        <item>All</item>
        <item>Other</item>
        <item>Learning</item>
        <item>Work</item>
        <item>Entertainment</item>
    </string-array>

</resources>